Add file paths.

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,3 +1,5 @@
+/* src/pages/index.module.css */
+
 /**
  * CSS files with the .module.css suffix will be treated as CSS modules
  * and scoped locally.
