--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,3 +1,5 @@
+/* src/css/custom.css */
+
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
